--- a/package.json
+++ b/package.json
@@ -14,12 +14,20 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "cross-env": "^5.2.0",
     "element-ui": "^2.4.11",
     "gulp-ejs": "^5.0.0",
     "gulp-rename": "^2.0.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.6.2",
+    "koa-bodyparser": "^4.2.1",
+    "koa-cookie": "^1.0.0",
+    "koa-cors": "0.0.16",
     "koa-router": "^7.4.0",
+    "md5": "^2.2.1",
+    "mongoose": "^5.8.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
@@ -27,7 +35,9 @@
     "babel-jest": "^24.1.0",
     "gulp": "^4.0.2",
     "jest": "^24.1.0",
+    "node-sass": "^4.13.0",
     "nodemon": "^1.18.9",
+    "sass-loader": "^8.0.0",
     "vue-jest": "^4.0.0-0"
   }
 }
