--- a/package.json
+++ b/package.json
@@ -26,9 +26,12 @@
     "koa-cookie": "^1.0.0",
     "koa-cors": "0.0.16",
     "koa-router": "^7.4.0",
+    "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "mongoose": "^5.8.1",
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "require-all": "^3.0.0",
+    "validator": "^12.1.0"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.0.0-beta.27",
