--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-task": "gulp"
   },
   "dependencies": {
+    "@nuxtjs/style-resources": "^1.0.0",
     "axios": "^0.19.0",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
