--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "ghost",
   "private": true,
   "scripts": {
+    "server": "cross-env NODE_ENV=development nodemon server/server.js --watch server",
     "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
